update responsive, nav mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="info">
                 <div class="logo">
-                    <svg width="107" height="24" viewBox="0 0 107 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="brand-logo" width="107" height="24" viewBox="0 0 107 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0.000213623 23.6163V0.767442H6.99436C12.0515 0.767442 14.5801 2.74419 14.5801 6.69767C14.5801 7.97674 14.2553 9.0814 13.6057 10.0116C12.9562 10.9419 12.0747 11.5233 10.9612 11.7558C12.2603 11.9419 13.2694 12.5116 13.9885 13.4651C14.7308 14.3953 15.1136 15.6163 15.1368 17.1279C15.1368 21.4535 12.3183 23.6163 6.68119 23.6163H0.000213623ZM7.20314 20.4767C8.7342 20.4767 9.8245 20.1395 10.474 19.4651C11.1236 18.7907 11.4483 17.8953 11.4483 16.7791C11.4483 15.6395 11.0888 14.814 10.3696 14.3023C9.67371 13.7907 8.56021 13.5349 7.02916 13.5349H3.61908V20.4767H7.20314ZM11.0308 6.97674C11.0308 4.93023 9.7665 3.90698 7.23794 3.90698H3.61908V10.3953H6.95956C9.67371 10.3953 11.0308 9.25581 11.0308 6.97674Z"
                             fill="#101010" />
@@ -49,9 +49,23 @@
             <div class="action">
                 <button class="action-btn">Sign up</button>
                 <button class="action-btn primary">Register</button>
+                <div class="sidebar-menu-btn">
+                        <span class="line line1"></span>
+                        <span class="line line2"></span>
+                        <span class="line line3"></span>
+                </div>
             </div>
         </div>
     </header>
+    <nav class="nav">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Fratures</a></li>
+            <li><a href="/">Service</a></li>
+            <li><a href="/">Listed</a></li>
+            <li><a href="/">Contact</a></li>
+        </ul>
+    </nav>
     <main>
         <section class="hero">
             <div class="container">
@@ -73,7 +87,7 @@
             <div class="container">
                 <div class="client__content">
                     <div class="client__content-heading">
-                        <svg width="107" height="24" viewBox="0 0 107 24" fill="none"
+                        <svg class="brand-logo" width="107" height="24" viewBox="0 0 107 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M0.000213623 23.6163V0.767442H6.99436C12.0515 0.767442 14.5801 2.74419 14.5801 6.69767C14.5801 7.97674 14.2553 9.0814 13.6057 10.0116C12.9562 10.9419 12.0747 11.5233 10.9612 11.7558C12.2603 11.9419 13.2694 12.5116 13.9885 13.4651C14.7308 14.3953 15.1136 15.6163 15.1368 17.1279C15.1368 21.4535 12.3183 23.6163 6.68119 23.6163H0.000213623ZM7.20314 20.4767C8.7342 20.4767 9.8245 20.1395 10.474 19.4651C11.1236 18.7907 11.4483 17.8953 11.4483 16.7791C11.4483 15.6395 11.0888 14.814 10.3696 14.3023C9.67371 13.7907 8.56021 13.5349 7.02916 13.5349H3.61908V20.4767H7.20314ZM11.0308 6.97674C11.0308 4.93023 9.7665 3.90698 7.23794 3.90698H3.61908V10.3953H6.95956C9.67371 10.3953 11.0308 9.25581 11.0308 6.97674Z"
@@ -460,7 +474,7 @@
             </div>
             <div class="copyright">
                 <div class="copyritht__logo">
-                    <svg width="107" height="24" viewBox="0 0 107 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="brand-logo" width="107" height="24" viewBox="0 0 107 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0.000213623 23.6163V0.767442H6.99436C12.0515 0.767442 14.5801 2.74419 14.5801 6.69767C14.5801 7.97674 14.2553 9.0814 13.6057 10.0116C12.9562 10.9419 12.0747 11.5233 10.9612 11.7558C12.2603 11.9419 13.2694 12.5116 13.9885 13.4651C14.7308 14.3953 15.1136 15.6163 15.1368 17.1279C15.1368 21.4535 12.3183 23.6163 6.68119 23.6163H0.000213623ZM7.20314 20.4767C8.7342 20.4767 9.8245 20.1395 10.474 19.4651C11.1236 18.7907 11.4483 17.8953 11.4483 16.7791C11.4483 15.6395 11.0888 14.814 10.3696 14.3023C9.67371 13.7907 8.56021 13.5349 7.02916 13.5349H3.61908V20.4767H7.20314ZM11.0308 6.97674C11.0308 4.93023 9.7665 3.90698 7.23794 3.90698H3.61908V10.3953H6.95956C9.67371 10.3953 11.0308 9.25581 11.0308 6.97674Z"
                             fill="#101010" />
@@ -489,4 +503,13 @@
         </div>
     </footer>
 </body>
+<script>
+    const menuBtn = document.querySelector('header > .container .sidebar-menu-btn');
+    const nav = document.querySelector('nav.nav');
+
+    menuBtn.addEventListener('click',()=>{
+        menuBtn.classList.toggle('active');
+        nav.classList.toggle('active');
+    })
+</script>
 </html>
